# Ripple

./: .gitignore  README.md  RIPPLE_system_design.md
core/: pyproject.toml
core/src/ripple/: __init__.py  chassis_db.py  db.py
core/src/ripple/ingest/: __init__.py  __main__.py  cli.py  covers.py  extract.py  mapping.py  risk.py  writer.py
core/src/ripple/memory/: __init__.py  client.py
core/src/ripple/query/: __init__.py  blast.py  graphview.py
core/src/ripple/sandbox/: __init__.py  base.py  daytona_provider.py  local_docker.py  verify.py
core/tests/: conftest.py  test_phase1_ingest.py  test_phase2_query.py  test_phase4_daytona_concurrency.py  test_phase4_local_orphans.py  test_phase4_sandbox.py  test_phase5_chassis_db.py  test_phase5_memory_client.py
core/tests/fixtures/miniproj/: pyproject.toml
core/tests/fixtures/miniproj/src/miniproj/: __init__.py  math_ops.py  models.py  service.py
core/tests/fixtures/miniproj/tests/: test_mini.py
infra/cognee/: .env.template  README.md  docker-compose.yml  run.sh
pipelines/: README.md  ripple_ask.pipe  ripple_draft.pipe  ripple_ingest.pipe
scripts/: run_api.sh  run_mcp.sh  smoke_phase1.sh  smoke_phase2.sh  smoke_phase3.sh  smoke_phase4.sh  smoke_phase5.sh
services/api/: pyproject.toml
services/api/src/ripple_api/: __init__.py  __main__.py  app.py
services/api/tests/: conftest.py  test_api.py
services/gateway/: pyproject.toml
services/gateway/src/ripple_gateway/: __init__.py  __main__.py  cli.py
services/gateway/tests/: test_cli.py
services/ripple-mcp/: pyproject.toml
services/ripple-mcp/src/ripple_mcp/: __init__.py  __main__.py  server.py
services/ripple-mcp/tests/: test_phase4_tools.py  test_phase5_memory_tools.py
specs/: phase1_ingest_spec.md  phase2_query_api_spec.md  phase3_pipelines_spec.md  phase4_verify_spec.md  phase5_cognee_spec.md  phase6_chassis_spec.md  phase7_frontend_spec.md  phase8_e2e_spec.md
specs/examples/: agent-test-verified.pipe  butterbase-agent.pipe
