[project]
name = "ripple"
version = "0.1.0"
description = "RIPPLE ingestion service"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/ripple"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

